# miniagda

./: .gitignore  README.md  rustfmt.toml
crates/miniagda/: Cargo.toml
crates/miniagda-bin/: Cargo.toml
crates/miniagda-bin/src/: main.rs
crates/miniagda-core/: Cargo.toml
crates/miniagda-core/src/: context.rs  core.rs  diagnostic.rs  elaborate.rs  lib.rs  normalize.rs  surface.rs  surface_to_core.rs
crates/miniagda-core/src/ast/: core.rs  mod.rs  surface.rs
crates/miniagda-core/src/diagnostics/: error.rs  mod.rs  span.rs
crates/miniagda-core/src/elaboration/: data.rs  elaborate.rs  eval.rs  func.rs  mod.rs  normalize.rs  state.rs
crates/miniagda-core/src/parser/: lex.rs  mod.rs  parse.rs
crates/miniagda-core/src/parsing/: lex.rs  mod.rs  parse.rs
crates/miniagda-core/src/syntax/: core.rs  mod.rs  surface.rs
crates/miniagda-watch/: Cargo.toml
crates/miniagda-watch/src/: main.rs
crates/miniagda/src/: lib.rs
crates/miniagda/src/diagnostics/: error.rs  span.rs
crates/miniagda/src/elaboration/: data.rs  eval.rs  mod.rs  state.rs
crates/miniagda/src/parsing/: lex.rs  parse.rs
crates/miniagda/src/syntax/: core.rs  mod.rs  surface.rs
examples/: foo.agda  min.agda  vec.agda
scripts/: dev  fmt  install
