[package]
name = "miniagda-watch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniagda = { path = "../miniagda" }
clap = { version = "*", features = ["derive"] }
termion = "*"
inotify = "*"
tokio = { version = "*", features = ["full"] }
futures = "*"